# local-dns

./: .gitignore  Cargo.toml  LICENSE  README.md  TEST_CATALOG.md  start-dev-simple.ps1  start-dev.ps1
src/: main.rs
src/db/: migration.sql  mod.rs  models.rs
src/dns/: cache.rs  handler.rs  mod.rs  resolver.rs  upstream.rs
src/logger/: mod.rs  worker.rs
src/web/: api.rs  mod.rs  router.rs
web-ui/: index.html  package-lock.json  package.json  vitest.config.ts
web-ui/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  types.ts
web-ui/src/components/: ThemeProvider.tsx  ThemeToggle.tsx
web-ui/src/pages/: Dashboard.test.tsx  Dashboard.tsx  Records.test.tsx  Records.tsx  Settings.test.tsx  Settings.tsx
web-ui/src/test/: mocks.ts  setup.ts  test-utils.tsx
