[package]
name = "local-dns-pro"
version = "0.1.0"
edition = "2021"

[dependencies]
# 非同期ランタイム
tokio = { version = "1.42", features = ["full"] }

# DNSエンジン
hickory-server = "0.25"
hickory-client = "0.25"
hickory-proto = "0.25"

# Webフレームワーク
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# データベース
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }

# シリアライゼーション
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# エラーハンドリング
anyhow = "1.0"
thiserror = "2.0"

# ログ
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 静的ファイル埋め込み
include_dir = "0.7"

# 時刻処理
chrono = "0.4"

# 正規表現
regex = "1.11"

[dev-dependencies]
# テスト用
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
